# buildingconsents

./: .gitignore  LICENSE  README.md  mcp_server.py  pyproject.toml
app/: councils.py  geocode.py  jurisdiction.py  main.py  zones.py
app/static/: app.js  index.html  robots.txt  style.css
ingest/: download_aup_zones.py  download_zones.py  leg_pipeline.py  legislation.py
tests/: conftest.py  test_api.py  test_smoke.py  test_zone.py
